# util-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  rename_files_by_date.py
.devcontainer/: devcontainer.json
ml/: sanity_check.py
revnice/: glass.ipynb
toy problems/dice_toss/: simulate_toss.py
