[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "2.2.2"
matplotlib = "3.9.2"
requests = "^2.32.0"
opencv-python = "^4.8.0"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.4.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.19.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.4.0%2Bcu121-cp311-cp311-linux_x86_64.whl" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
