[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Core ML / DL
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
torchtext = "*"
tensorflow = "^2.15.0"  # optional alternative to PyTorch
scikit-learn = "^1.3.0"
xgboost = "*"
lightgbm = "^4.0.1"
catboost = "^1.1.3"

# Computer Vision
opencv-python = "^4.8.1"
Pillow = "^10.1.0"
albumentations = "^1.3.1"  # image augmentations
scikit-image = "^0.21.0"

# Data handling
pandas = "^2.1.1"
numpy = "^1.26.2"
h5py = "^3.9.0"
datasets = "^2.17.1"  # HuggingFace datasets

# Visualization
matplotlib = "^3.8.1"
seaborn = "*"
plotly = "^5.16.0"

# NLP / Transformers
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"

# Jupyter / interactive
notebook = "^7.3"
jupyterlab = "^4.1"
ipykernel = "^6.29"
ipywidgets = "*"

# Utilities
tqdm = "^4.66.0"
requests = "^2.31.0"
rich = "^13.6.0"
loguru = "^0.7.0"

# Optional GPU acceleration / math
cupy = {version = "^12.2.0", optional = true}  # CUDA accelerated numpy-like

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "^6.1.0"
mypy = "^1.4.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
